# opencli-rs

./: Cargo.toml  NOTICE  README.ja.md  README.md  README.zh.md
.github/workflows/: release.yml  sync.yml
adapters/antigravity/: dump.yaml  extract-code.yaml  model.yaml  new.yaml  read.yaml  send.yaml  serve.yaml  status.yaml  watch.yaml
adapters/apple-podcasts/: episodes.yaml  search.yaml  top.yaml
adapters/arxiv/: paper.yaml  search.yaml
adapters/barchart/: flow.yaml  greeks.yaml  options.yaml  quote.yaml
adapters/bbc/: news.yaml
adapters/bilibili/: download.yaml  dynamic.yaml  favorite.yaml  feed.yaml  following.yaml  history.yaml  hot.yaml  me.yaml  ranking.yaml  search.yaml  subtitle.yaml  user-videos.yaml
adapters/bloomberg/: businessweek.yaml  economics.yaml  feeds.yaml  industries.yaml  main.yaml  markets.yaml  news.yaml  opinions.yaml  politics.yaml  tech.yaml
adapters/boss/: batchgreet.yaml  chatlist.yaml  chatmsg.yaml  detail.yaml  exchange.yaml  greet.yaml  invite.yaml  joblist.yaml  mark.yaml  recommend.yaml  resume.yaml  search.yaml  send.yaml  stats.yaml
adapters/chaoxing/: assignments.yaml  exams.yaml
adapters/chatgpt/: ask.yaml  ax.yaml  new.yaml  read.yaml  send.yaml  status.yaml
adapters/chatwise/: ask.yaml  export.yaml  history.yaml  model.yaml  new.yaml  read.yaml  screenshot.yaml  send.yaml  status.yaml
adapters/codex/: ask.yaml  dump.yaml  export.yaml  extract-diff.yaml  history.yaml  model.yaml  new.yaml  read.yaml  screenshot.yaml  send.yaml  status.yaml
crates/autocli-ai/: Cargo.toml
crates/autocli-ai/src/: ai_generate.rs  cascade.rs  config.rs  explore.rs  generate.rs  llm.rs  synthesize.rs  types.rs  url_pattern.rs
crates/autocli-browser/: Cargo.toml
crates/autocli-browser/src/: bridge.rs  cdp.rs  daemon.rs  daemon_client.rs  dom_helpers.rs  lib.rs  page.rs
crates/autocli-discovery/: Cargo.toml  build.rs
crates/autocli-discovery/src/: builtin.rs  user.rs  yaml_parser.rs
crates/autocli-external/: Cargo.toml
crates/autocli-external/resources/: external-clis.yaml
crates/autocli-external/src/: executor.rs  lib.rs  loader.rs  types.rs
scripts/: install.sh  test-all-commands.sh
(+308 files in other folders)
