[package]
name = "autocli-ai"
version.workspace = true
edition.workspace = true

[dependencies]
autocli-core = { path = "../autocli-core" }
autocli-browser = { path = "../autocli-browser" }
autocli-pipeline = { path = "../autocli-pipeline" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
