[package]
name = "autocli-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
autocli-core = { path = "../autocli-core" }
autocli-pipeline = { path = "../autocli-pipeline" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
