[package]
name = "autocli-external"
version.workspace = true
edition.workspace = true

[dependencies]
autocli-core = { path = "../autocli-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
